# RudeRacoon

./: CMakeLists.txt  README.md
assets/: fragment_core.glsl  fragment_core3.glsl  vertex_core.glsl
include/: Application.h  Log.h  Window.h
src/: Application.cpp  Log.cpp  Window.cpp  glad.c  main.cpp
